--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.8.7",
     "antd": "^5.25.2",
     "axios": "^1.9.0",
     "react": "^19.1.0",
